--- a/index.html
+++ b/index.html
@@ -21,7 +21,12 @@
     <![endif]-->
   </head>
   <body>
-    <h1>Sky Was Pink</h1>
+
+  <!-- FOOTER -->
+      <footer>
+        <p class="pull-right"><a href="#">Back to top</a></p>
+        <p>&copy; 2016 La Grignote, Inc. &middot; Design by <a>Papatango Flying Circus</a></p>
+      </footer>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
