--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
   </head>
   <body>
 
+     <div class="container marketing">
+
        <!-- START THE FEATURETTES -->
 
       <hr class="featurette-divider">
@@ -67,11 +69,12 @@
 
       <!-- /END THE FEATURETTES -->
 
-  <!-- FOOTER -->
       <footer>
         <p class="pull-right"><a href="#">Back to top</a></p>
         <p>&copy; 2016 La Grignote, Inc. &middot; Design by <a>Papatango Flying Circus</a></p>
       </footer>
+
+      </div><!-- /.container marketing -->
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
