don't use holder.js

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
         </div>
         <div class="col-md-5">
-          <img class="featurette-image img-responsive center-block" data-src="img/french_pastries.jpg" alt="Generic placeholder image">
+          <img class="featurette-image img-responsive center-block" src="img/french_pastries.jpg" alt="Generic placeholder image">
         </div>
       </div>
 
@@ -49,7 +49,7 @@
           <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
         </div>
         <div class="col-md-5 col-md-pull-7">
-          <img class="featurette-image img-responsive center-block" data-src="img/uncooked_croissants.jpg" alt="Generic placeholder image">
+          <img class="featurette-image img-responsive center-block" src="img/uncooked_croissants.jpg" alt="Generic placeholder image">
         </div>
       </div>
 
@@ -61,7 +61,7 @@
           <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
         </div>
         <div class="col-md-5">
-          <img class="featurette-image img-responsive center-block" data-src="img/soup.jpg" alt="Generic placeholder image">
+          <img class="featurette-image img-responsive center-block" src="img/soup.jpg" alt="Generic placeholder image">
         </div>
       </div>
 
