--- a/index.html
+++ b/index.html
@@ -25,6 +25,21 @@
   </head>
   <body>
 
+     <!-- Fixed navbar -->
+    <nav class="navbar navbar-default navbar-fixed-top">
+      <div class="container">
+        <div class="navbar-header">
+          <a class="navbar-brand" href="#">La Grignote</a>
+        </div>
+        <div id="navbar" class="navbar-collapse collapse">
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="#">Home</a></li>
+            <li><a href="#about">Menu</a></li>
+            <li><a href="#contact">About us</a></li>
+        </div><!--/.nav-collapse -->
+      </div>
+    </nav>
+
      <div class="container marketing">
 
        <!-- START THE FEATURETTES -->
