--- a/index.html
+++ b/index.html
@@ -33,9 +33,10 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#about">Menu</a></li>
+            <li><a href="#">Home</a></li>
+            <li class="active"><a href="#about">Menu</a></li>
             <li><a href="#contact">About us</a></li>
+          </ul>
         </div><!--/.nav-collapse -->
       </div>
     </nav>
