--- a/index.html
+++ b/index.html
@@ -51,6 +51,10 @@
             <li><a href="#contact">About us</a></li>
           </ul>
         </div><!--/.nav-collapse  -->
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="https://www.instagram.com/lagrignote/">F</a>
+            <a href="https://www.yelp.com/biz_photos/la-grignote-key-west">Y</a></li>
+          </ul>
       </div>
     </nav> -->
 
