--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <li><a href="#contact">About us</a></li>
           </ul>
         </div><!--/.nav-collapse  -->
-        <div class="nav navbar-nav navbar-right">
+        <div class="navbar-right">
             <a href="https://www.instagram.com/lagrignote/">I</a>
             <a href="https://www.yelp.com/biz/la-grignote-key-west">Y</a></li>
         <div>
