--- a/index.html
+++ b/index.html
@@ -50,11 +50,14 @@
             <li class="active"><a href="#about">Menu</a></li>
             <li><a href="#contact">About us</a></li>
           </ul>
-        </div><!--/.nav-collapse  -->
-        <div class="navbar-right">
+          <div class="navbar-right">
+          <ul class="nav navbar-nav">
             <a href="https://www.instagram.com/lagrignote/">I</a>
             <a href="https://www.yelp.com/biz/la-grignote-key-west">Y</a></li>
-        <div>
+          </ul>
+          </div>
+
+        </div><!--/.nav-collapse  -->
       </div>
     </nav> -->
 
