--- a/index.html
+++ b/index.html
@@ -105,6 +105,30 @@
 
       <!-- /END THE FEATURETTES -->
 
+      <!-- Set height and width with CSS -->
+      <div id="googleMap" style="height:400px;width:100%;"></div>
+
+      <!-- Add Google Maps -->
+      <script src="http://maps.googleapis.com/maps/api/js"></script>
+      <script>
+      var laGrignoteGPS = new google.maps.LatLng(24.549287, -81.797451);
+
+      function initialize() {
+        var mapProp = { 
+          center:laGrignoteGPS, zoom:14, scrollwheel:false, draggable:false, mapTypeId:google.maps.MapTypeId.ROADMAP
+        };
+
+        var map = new google.maps.Map(document.getElementById("googleMap"),mapProp);
+
+        var marker = new google.maps.Marker({
+          position:laGrignoteGPS,
+        });
+
+        marker.setMap(map);
+      }
+      google.maps.event.addDomListener(window, 'load', initialize);
+      </script>
+
       <footer>
         <p class="pull-right"><a href="#">Back to top</a></p>
         <p>&copy; 2016 La Grignote, Inc. &middot; Design by <a>Papatango Flying Circus</a></p>
