Social Media Icons + Font Awesome

--- a/index.html
+++ b/index.html
@@ -15,9 +15,12 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <!-- Font Awesome-->
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
 
     <!-- Custom styles for the carousel template -->
     <link href="carousel.css" rel="stylesheet">
+    <link href="bootstrap-social.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -52,7 +55,9 @@
           </ul>
           <div class="navbar-right">
           <ul class="nav navbar-nav">
-            <a href="https://www.instagram.com/lagrignote/">I</a>
+            <a href="https://www.instagram.com/lagrignote/"> 
+            <a class="btn btn-social-icon btn-instagram"><span class="fa fa-instagram"></span></a>
+            </a>
             <a href="https://www.yelp.com/biz/la-grignote-key-west">Y</a></li>
           </ul>
           </div>
