--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
         </div>
         <div class="col-md-5">
-          <img class="featurette-image img-responsive center-block" src="img/french_pastries.jpg" alt="Generic placeholder image">
+          <img class="featurette-image img-responsive center-block img-circle" src="img/french_pastries.jpg" alt="Generic placeholder image">
         </div>
       </div>
 
@@ -90,7 +90,7 @@
           <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
         </div>
         <div class="col-md-5 col-md-pull-7">
-          <img class="featurette-image img-responsive center-block" src="img/uncooked_croissants.jpg" alt="Generic placeholder image">
+          <img class="featurette-image img-responsive center-block img-circle" src="img/uncooked_croissants.jpg" alt="Generic placeholder image">
         </div>
       </div>
 
@@ -102,7 +102,7 @@
           <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
         </div>
         <div class="col-md-5">
-          <img class="featurette-image img-responsive center-block" src="img/soup.jpg" alt="Generic placeholder image">
+          <img class="featurette-image img-responsive center-block img-circle" src="img/soup.jpg" alt="Generic placeholder image">
         </div>
       </div>
 
