grignote style sheet

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <!-- Custom styles for the carousel template -->
     <link href="carousel.css" rel="stylesheet">
     <link href="bootstrap-social.css" rel="stylesheet">
+    <link href="grignote.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
