--- a/index.html
+++ b/index.html
@@ -67,6 +67,77 @@
       </div>
     </nav>
 
+<div id="myCarousel" class="carousel slide" data-ride="carousel">
+  <!-- Indicators -->
+  <ol class="carousel-indicators">
+    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+    <li data-target="#myCarousel" data-slide-to="1"></li>
+    <li data-target="#myCarousel" data-slide-to="2"></li>
+  </ol>
+
+  <!-- Wrapper for slides -->
+  <div class="carousel-inner" role="listbox">
+    <div class="item active">
+      <img src="img/store_front.jpg" alt="New York">
+      <!--div class="carousel-caption">
+        <h2>In the heart of Key West, FL</h2>
+        <p>We are located west of the historical district, on Duval St.</p>
+      </div--> 
+    </div>
+
+    <div class="item">
+      <img src="img/store_terasse.jpg" alt="Chicago">
+      <!--div class="carousel-caption">
+        <h3>With Plenty of Outdoor Seating.</h3>
+        <p>Or stay inside and check out our beach wood countertops.</p>
+      </div--> 
+    </div>
+
+    <div class="item">
+      <img src="img/soup.jpg" alt="Los Angeles">
+      <!--div class="carousel-caption">
+        <h3>Coffee or Lunch, you decide.</h3>
+        <p>We make our own french style pastries. We have soup too.</p>
+      </div--> 
+    </div>
+  </div>
+
+  <!-- Left and right controls -->
+  <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+
+
+<div class="container text-center marketing">
+  <h2 class="featurette-heading">La grignote<br></h2>
+  <h3><span class="text-muted">Key West, FL</span></h3>
+  <p class="lead">A french bakery and lunch cafe on Duval St.</p>
+
+  <div class="row featurette">
+      <div class="col-sm-6">
+        <p><strong>Opening Hours</strong></p><br>
+        Tue-Sunday : 8AM - 5PM<BR>
+        Monday: Closed
+      </div>
+      <div class="col-sm-6">
+        <p><strong>Follow us</strong></p><br>
+                    <a href="https://www.instagram.com/lagrignote/"> 
+            <a class="btn btn-social-icon btn-instagram"><span class="fa fa-instagram"></span></a>
+            on instagram
+            </a>
+
+      </div>
+  </div>
+
+</div>
+
+
 
      <div class="container marketing">
 
