--- a/index.html
+++ b/index.html
@@ -181,6 +181,28 @@
 
       <hr class="featurette-divider">
 
+      <div class="row featurette text-center">
+      <div class="col-sm-4">
+        <img src="img/real_people.jpg" alt="People" class="featurette-image img-responsive center-block img-circle" style="width:50%">
+        <p><strong>A dedicated team</strong></p><br>
+      </div>
+        <div class="col-sm-4">
+        <img src="img/real_coffee.jpg" alt="Coffee" class="featurette-image img-responsive center-block img-circle" style="width:50%">
+        <p><strong>Real Coffee</strong></p><br>
+      </div>
+
+      <div class="col-sm-4">
+        <img src="img/real_ingredients.jpg" alt="Pup" class="featurette-image img-responsive center-block img-circle" style="width:50%">
+        <p><strong>The right Ingredients</strong></p><br>
+
+      </div>
+      </div>
+
+    </div>
+
+
+      <hr class="featurette-divider">
+
       <!-- /END THE FEATURETTES -->
 
       <!-- Set height and width with CSS -->
