--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     </div>
 
     <div class="item">
-      <img src="img/store_terasse.jpg" alt="Chicago">
+      <img src="img/counter.jpg" alt="Chicago">
       <!--div class="carousel-caption">
         <h3>With Plenty of Outdoor Seating.</h3>
         <p>Or stay inside and check out our beach wood countertops.</p>
