--- a/index.html
+++ b/index.html
@@ -120,16 +120,30 @@
   <p class="lead">A french bakery and lunch cafe on Duval St.</p>
 
   <div class="row featurette">
-      <div class="col-sm-6">
+      <div class="col-sm-4">
+        <h1><i class="fa fa-clock-o" aria-hidden="true"></i></h1>
         <p><strong>Opening Hours</strong></p><br>
-        Tue-Sunday : 8AM - 5PM<BR>
-        Monday: Closed
+        Tueday-Sunday : 7AM - 5PM<BR>
+        Monday: Closed<BR>
+        Tuesday: Closed
       </div>
-      <div class="col-sm-6">
+        <div class="col-sm-4">
+        <h1><i class="fa fa-map-marker" aria-hidden="true"></i></h1>
+        <p><strong>Location</strong></p><br>
+        1211 Duval St,<BR>
+        Key West, FL, 33040,<BR>
+        USA<BR>
+        <i class="fa fa-phone" aria-hidden="true"></i> (305) 916-5445
+      </div>
+
+      <div class="col-sm-4">
+        <h1><i class="fa fa-instagram" aria-hidden="true"></i></h1>
         <p><strong>Follow us</strong></p><br>
-                    <a href="https://www.instagram.com/lagrignote/"> 
-            <a class="btn btn-social-icon btn-instagram"><span class="fa fa-instagram"></span></a>
-            on instagram
+            <a href="https://www.instagram.com/lagrignote/"> 
+              <h4 style="margin-top: 0px"><i class="fa fa-instagram" aria-hidden="true"></i> instagram</h3>
+            </a>
+            <a href="https://www.yelp.com/biz/la-grignote-key-west"> 
+              <h4><i class="fa fa-yelp aria-hidden="true"></i> yelp</h3>
             </a>
 
       </div>
