--- a/index.html
+++ b/index.html
@@ -117,7 +117,9 @@
 <div class="container text-center marketing">
   <h2 class="featurette-heading">La grignote<br></h2>
   <h3><span class="text-muted">Key West, FL</span></h3>
-  <p class="lead">A french bakery and lunch cafe on Duval St.</p>
+  <p class="lead">A french bakery, espresso and lunch cafe on Duval St.</p>
+
+  <hr class="featurette-divider">
 
   <div class="row featurette">
       <div class="col-sm-4">
