Custom Grignote font

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">La Grignote</a>
+          <a class="navbar-brand grignoteTitle" href="#">La Grignote</a>
         </div>
         <div id="navigationbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
@@ -115,7 +115,7 @@
 
 
 <div class="container text-center marketing">
-  <h2 class="featurette-heading">La grignote<br></h2>
+  <h2 class="featurette-heading" style="font-family: gricanard">La grignote<br></h2>
   <h3><span class="text-muted">Key West, FL</span></h3>
   <p class="lead">A french bakery, espresso and lunch cafe on Duval St.</p>
 
