--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>La Grignote French Bakery, Key West, FL</title>
+    <title>La Grignote Artisan French Bakery, Key West, FL</title>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
@@ -31,12 +31,7 @@
     <![endif]-->
   </head>
   <body>
-
-
-   
-
-
-     <!-- Fixed navbar -->
+    <!-- Fixed navbar -->
     <nav class="navbar navbar-default navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
@@ -55,110 +50,103 @@
             <li><a href="#contact">About us</a></li>
           </ul>
           <div class="navbar-right">
-          <ul class="nav navbar-nav">
-            <a href="https://www.instagram.com/lagrignote/"> 
-            <a class="btn btn-social-icon btn-instagram"><span class="fa fa-instagram"></span></a>
+          <div class="nav navbar-nav">
+            <a href="https://www.instagram.com/lagrignote/">
+              <h2 style="margin-top: 5px"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+            <a href="https://www.yelp.com/biz/la-grignote-key-west"> 
+              <i class="fa fa-yelp aria-hidden="true"></i></h2>
             </a>
-            <a href="https://www.yelp.com/biz/la-grignote-key-west">Y</a></li>
-          </ul>
           </div>
-
+          </div>
         </div><!--/.nav-collapse  -->
       </div>
     </nav>
+    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+      <!-- Indicators -->
+      <ol class="carousel-indicators">
+        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+        <li data-target="#myCarousel" data-slide-to="1"></li>
+        <li data-target="#myCarousel" data-slide-to="2"></li>
+      </ol>
 
-<div id="myCarousel" class="carousel slide" data-ride="carousel">
-  <!-- Indicators -->
-  <ol class="carousel-indicators">
-    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-    <li data-target="#myCarousel" data-slide-to="1"></li>
-    <li data-target="#myCarousel" data-slide-to="2"></li>
-  </ol>
+      <!-- Wrapper for slides -->
+      <div class="carousel-inner" role="listbox">
+        <div class="item active">
+          <img src="img/store_front.jpg" alt="Store Front">
+          <!--div class="carousel-caption">
+            <h2>In the heart of Key West, FL</h2>
+            <p>We are located west of the historical district, on Duval St.</p>
+          </div--> 
+        </div>
 
-  <!-- Wrapper for slides -->
-  <div class="carousel-inner" role="listbox">
-    <div class="item active">
-      <img src="img/store_front.jpg" alt="New York">
-      <!--div class="carousel-caption">
-        <h2>In the heart of Key West, FL</h2>
-        <p>We are located west of the historical district, on Duval St.</p>
-      </div--> 
-    </div>
+        <div class="item">
+          <img src="img/counter.jpg" alt="Counter">
+          <!--div class="carousel-caption">
+            <h3>With Plenty of Outdoor Seating.</h3>
+            <p>Or stay inside and check out our beach wood countertops.</p>
+          </div--> 
+        </div>
 
-    <div class="item">
-      <img src="img/counter.jpg" alt="Chicago">
-      <!--div class="carousel-caption">
-        <h3>With Plenty of Outdoor Seating.</h3>
-        <p>Or stay inside and check out our beach wood countertops.</p>
-      </div--> 
-    </div>
-
-    <div class="item">
-      <img src="img/soup.jpg" alt="Los Angeles">
-      <!--div class="carousel-caption">
-        <h3>Coffee or Lunch, you decide.</h3>
-        <p>We make our own french style pastries. We have soup too.</p>
-      </div--> 
-    </div>
-  </div>
-
-  <!-- Left and right controls -->
-  <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
-</div>
-
-
-<div class="container text-center marketing">
-  <h2 class="featurette-heading" style="font-family: gricanard">La grignote<br></h2>
-  <h3><span class="text-muted">Key West, FL</span></h3>
-  <p class="lead">A french bakery, espresso and lunch cafe on Duval St.</p>
-
-  <hr class="featurette-divider">
-
-  <div class="row featurette">
-      <div class="col-sm-4">
-        <h1><i class="fa fa-clock-o" aria-hidden="true"></i></h1>
-        <p><strong>Opening Hours</strong></p><br>
-        Tueday-Sunday : 7AM - 5PM<BR>
-        Monday: Closed<BR>
-        Tuesday: Closed
-      </div>
-        <div class="col-sm-4">
-        <h1><i class="fa fa-map-marker" aria-hidden="true"></i></h1>
-        <p><strong>Location</strong></p><br>
-        1211 Duval St,<BR>
-        Key West, FL, 33040,<BR>
-        USA<BR>
-        <i class="fa fa-phone" aria-hidden="true"></i> (305) 916-5445
+        <div class="item">
+          <img src="img/soup.jpg" alt="Soup">
+          <!--div class="carousel-caption">
+            <h3>Coffee or Lunch, you decide.</h3>
+            <p>We make our own french style pastries. We have soup too.</p>
+          </div--> 
+        </div>
       </div>
 
-      <div class="col-sm-4">
-        <h1><i class="fa fa-instagram" aria-hidden="true"></i></h1>
-        <p><strong>Follow us</strong></p><br>
-            <a href="https://www.instagram.com/lagrignote/"> 
-              <h4 style="margin-top: 0px"><i class="fa fa-instagram" aria-hidden="true"></i> instagram</h3>
-            </a>
-            <a href="https://www.yelp.com/biz/la-grignote-key-west"> 
-              <h4><i class="fa fa-yelp aria-hidden="true"></i> yelp</h3>
-            </a>
+      <!-- Left and right controls -->
+      <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
 
+    <!-- Opening Hours, Location, Follow us -->
+    <div class="container text-center marketing">
+      <h2 class="featurette-heading" style="font-family: gricanard">La Grignote<br></h2>
+      <h3><span class="text-muted">Key West, FL</span></h3>
+      <p class="lead">A french bakery, espresso and lunch cafe on Duval St.</p>
+
+      <hr class="featurette-divider">
+
+      <div class="row featurette">
+          <div class="col-sm-4">
+            <h1><i class="fa fa-clock-o" aria-hidden="true"></i></h1>
+            <p><strong>Opening Hours</strong></p><br>
+            Tueday-Sunday : 7AM - 5PM<BR>
+            Monday: Closed<BR>
+            Tuesday: Closed
+          </div>
+            <div class="col-sm-4">
+            <h1><i class="fa fa-map-marker" aria-hidden="true"></i></h1>
+            <p><strong>Location</strong></p><br>
+            1211 Duval St,<BR>
+            Key West, FL, 33040,<BR>
+            USA<BR>
+            <i class="fa fa-phone" aria-hidden="true"></i> (305) 916-5445
+          </div>
+
+          <div class="col-sm-4">
+            <h1><i class="fa fa-instagram" aria-hidden="true"></i></h1>
+            <p><strong>Follow us</strong></p><br>
+                <a href="https://www.instagram.com/lagrignote/"> 
+                  <h4 style="margin-top: 0px"><i class="fa fa-instagram" aria-hidden="true"></i> instagram</h3>
+                </a>
+                <a href="https://www.yelp.com/biz/la-grignote-key-west"> 
+                  <h4><i class="fa fa-yelp aria-hidden="true"></i> yelp</h3>
+                </a>
+          </div>
       </div>
-  </div>
+    </div>
 
-</div>
-
-
-
-     <div class="container marketing">
-
-       <!-- START THE FEATURETTES -->
-
+    <!-- Featurettes -->
+    <div class="container marketing">
       <hr class="featurette-divider">
 
       <div class="row featurette">
@@ -198,28 +186,25 @@
       <hr class="featurette-divider">
 
       <div class="row featurette text-center">
-      <div class="col-sm-4">
-        <img src="img/real_people.jpg" alt="People" class="featurette-image img-responsive center-block img-circle" style="width:50%">
-        <p><strong>A dedicated team</strong></p><br>
-      </div>
+        <div class="col-sm-4">
+          <img src="img/real_people.jpg" alt="People" class="featurette-image img-responsive center-block img-circle" style="width:50%">
+          <p><strong>A dedicated team</strong></p><br>
+        </div>
         <div class="col-sm-4">
         <img src="img/real_coffee.jpg" alt="Coffee" class="featurette-image img-responsive center-block img-circle" style="width:50%">
         <p><strong>Real Coffee</strong></p><br>
-      </div>
-
-      <div class="col-sm-4">
+        </div>
+        <div class="col-sm-4">
         <img src="img/real_ingredients.jpg" alt="Pup" class="featurette-image img-responsive center-block img-circle" style="width:50%">
         <p><strong>The right Ingredients</strong></p><br>
-
+        </div>
       </div>
-      </div>
-
-    </div>
-
 
       <hr class="featurette-divider">
+    </div>
 
-      <!-- /END THE FEATURETTES -->
+      
+      <!-- Map -->
 
       <!-- Set height and width with CSS -->
       <div id="googleMap" style="height:400px;width:100%;"></div>
@@ -249,7 +234,5 @@
         <p class="pull-right"><a href="#">Back to top</a></p>
         <p>&copy; 2016 La Grignote, Inc. &middot; Design by <a>Papatango Flying Circus</a></p>
       </footer>
-
-      </div><!-- /.container marketing -->
   </body>
 </html>
