Update Marketing message

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     <div class="container text-center marketing">
       <h2 class="featurette-heading" style="font-family: gricanard">La Grignote<br></h2>
       <h3><span class="text-muted">Key West, FL</span></h3>
-      <p class="lead">A french bakery, espresso and lunch cafe on Duval St.</p>
+      <p class="lead">La Grignote is an Artisan French Bakery - Café – Bistro that offers a selection of home made Viennoiseries-Pastries-Bread-Sandwiches and Salads. Everything is made from scratch.</p>
 
       <hr class="featurette-divider">
 
