--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand grignoteTitle" href="#">La Grignote</a>
+          <span class="grignoteNavTitle">La Grignote</span>
         </div>
         <div id="navigationbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
@@ -109,7 +109,7 @@
 
     <!-- Opening Hours, Location, Follow us -->
     <div class="container text-center marketing">
-      <h2 class="featurette-heading" style="font-family: gricanard">La Grignote<br></h2>
+      <h2 class="featurette-heading grignoteLogo">La Grignote<br></h2>
       <h3><span class="text-muted">Key West, FL</span></h3>
       <p class="lead">La Grignote is an Artisan French Bakery - Café – Bistro that offers a selection of home made Viennoiseries-Pastries-Bread-Sandwiches and Salads. Everything is made from scratch.</p>
 
