--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
         <div id="navigationbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             <li><a href="#">Home</a></li>
-            <li class="active"><a href="#about">Menu</a></li>
-            <li><a href="#contact">About us</a></li>
+            <li class=""><a href="#menu">Menu</a></li>
+            <li><a href="#about">About us</a></li>
           </ul>
           <div class="navbar-right">
           <div class="nav navbar-nav">
