--- a/index.html
+++ b/index.html
@@ -203,6 +203,47 @@
       <hr class="featurette-divider">
     </div>
 
+    <div class="container marketing" id="menu">
+    <div class = "panel panel-default">
+      <div class="panel-heading">
+          <h3 class="panel-title">Viennoiseries</h3>
+      </div>
+      <ul class="list-group">
+        <li class = "list-group-item">
+          <span class = "badge pull-right"> $3.50</span>
+          <span class = "badge pull-right">NEW</span>
+          Croissant
+        </li>
+        <li class = "list-group-item">
+          <span class = "badge pull-right"> $4.50</span>
+          Almond Croissant
+        </li>
+        <li class = "list-group-item">
+          <span class = "badge pull-right"> $4.25</span>
+          Chocolate Croissant
+        </li>
+        <li class = "list-group-item">
+          <span class = "badge pull-right"> $3.00</span>
+          Cinnamon Sugar Morning Bun
+        </li>
+        <li class = "list-group-item">
+          <span class = "badge pull-right"> $3.00</span>
+          Danish
+        </li>
+        <li class = "list-group-item">
+          <span class = "badge pull-right"> $3.50</span>
+          Pain aux raisins
+        </li>
+        <li class = "list-group-item">
+          <span class = "pull-right"> $3.50</span>
+          Muffin
+        </li>
+        <li class = "list-group-item">
+          <span class = "badge pull-right"> $2.00</span>
+          Cookie
+        </li>
+      </ul>
+    </div>
       
     <!-- Map -->
 
