--- a/index.html
+++ b/index.html
@@ -204,47 +204,86 @@
     </div>
 
     <div class="container marketing" id="menu">
-    <div class = "panel panel-default">
-      <div class="panel-heading">
-          <h3 class="panel-title">Viennoiseries</h3>
-      </div>
-      <ul class="list-group">
-        <li class = "list-group-item">
-          <span class = "badge pull-right"> $3.50</span>
-          <span class = "badge pull-right">NEW</span>
-          Croissant
-        </li>
-        <li class = "list-group-item">
-          <span class = "badge pull-right"> $4.50</span>
-          Almond Croissant
-        </li>
-        <li class = "list-group-item">
-          <span class = "badge pull-right"> $4.25</span>
-          Chocolate Croissant
-        </li>
-        <li class = "list-group-item">
-          <span class = "badge pull-right"> $3.00</span>
-          Cinnamon Sugar Morning Bun
-        </li>
-        <li class = "list-group-item">
-          <span class = "badge pull-right"> $3.00</span>
-          Danish
-        </li>
-        <li class = "list-group-item">
-          <span class = "badge pull-right"> $3.50</span>
-          Pain aux raisins
-        </li>
-        <li class = "list-group-item">
-          <span class = "pull-right"> $3.50</span>
-          Muffin
-        </li>
-        <li class = "list-group-item">
-          <span class = "badge pull-right"> $2.00</span>
-          Cookie
-        </li>
-      </ul>
-    </div>
+    
+    <div class="row">
+      <div class="col-md-6">
+
+        <div class = "panel panel-default">
+          <div class="panel-heading">
+              <h3 class="panel-title">Viennoiseries</h3>
+          </div>
+          <ul class="list-group">
+            <li class = "list-group-item">
+              <span class = "badge pull-right"> $3.50</span>
+              <span class = "badge pull-right">NEW</span>
+              Croissant
+            </li>
+            <li class = "list-group-item">
+              <span class = "badge pull-right"> $4.50</span>
+              Almond Croissant
+            </li>
+            <li class = "list-group-item">
+              <span class = "badge pull-right"> $4.25</span>
+              Chocolate Croissant
+            </li>
+            <li class = "list-group-item">
+              <span class = "badge pull-right"> $3.00</span>
+              Cinnamon Sugar Morning Bun
+            </li>
+            <li class = "list-group-item">
+              <span class = "badge pull-right"> $3.00</span>
+              Danish
+            </li>
+            <li class = "list-group-item">
+              <span class = "badge pull-right"> $3.50</span>
+              Pain aux raisins
+            </li>
+            <li class = "list-group-item">
+              <span class = "pull-right"> $3.50</span>
+              Muffin
+            </li>
+            <li class = "list-group-item">
+              <span class = "badge pull-right"> $2.00</span>
+              Cookie
+            </li>
+          </ul>
+        </div>
       
+      </div>
+      <div class="col-md-6">
+
+        <div class = "panel panel-default">
+            <div class="panel-heading">
+                <h3 class="panel-title">Savory</h3>
+            </div>
+            <ul class="list-group">
+              <li class = "list-group-item">
+                <span class = "badge pull-right"> $4.50</span>
+                <span class = "badge pull-right">NEW</span>
+                Ham and Chesse croissant
+              </li>
+              <li class = "list-group-item">
+                <span class = "badge pull-right"> $5.50</span>
+                Baked eggs
+              </li>
+              <li class = "list-group-item">
+                <span class = "badge pull-right"> $5.50</span>
+                Goat Cheese Mushroom Galette
+              </li>
+              <li class = "list-group-item">
+                <span class = "badge pull-right"> $5.50</span>
+                Goat Cheese Cherry Tomato Galette
+              </li>
+              <li class = "list-group-item">
+                <span class = "badge pull-right"> $13.50</span>
+                Quiche Lorraine served with a side salad
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <!-- Map -->
 
     <!-- Set height and width with CSS -->
