--- a/index.html
+++ b/index.html
@@ -259,6 +259,52 @@
           </ul>
         </div>
       
+        <div class = "panel panel-default">
+          <div class="panel-heading">
+              <h3 class="panel-title">Belgium Waffle</h3>
+          </div>
+          <ul class="list-group">
+            <li class = "list-group-item">
+              <span class = "badge pull-right"> $8.50</span>
+              <span class = "badge pull-right">CLASSIC</span>
+              Topped with powder sugar
+            </li>
+            <li class = "list-group-item">
+              <span class = "badge pull-right"> +$2.00</span>
+              Home made Nutella
+            </li>
+            <li class = "list-group-item">
+              <span class = "badge pull-right"> +$2.00</span>
+              Home made Jam
+            </li>
+            <li class = "list-group-item">
+              <span class = "badge pull-right"> +$2.00</span>
+              Home made Chantilly
+            </li>
+            <li class = "list-group-item">
+              <span class = "badge pull-right"> +$2.00</span>
+              Home Made Granola
+            </li>
+            <li class = "list-group-item">
+              <span class = "badge pull-right"> +$2.00</span>
+              Sliced Bannana
+            </li>
+            <li class = "list-group-item">
+              <span class = "pull-right"> +$2.00</span>
+              Market Berries
+            </li>
+            <li class = "list-group-item">
+              <span class = "badge pull-right"> +$2.00</span>
+              Home made ricotta
+            </li>
+            <li class = "list-group-item">
+              <span class = "badge pull-right"> +$2.00</span>
+              Orange Blossom Honey
+            </li>
+
+          </ul>
+        </div>
+
       </div>
       <div class="col-md-6">
 
