Petit Dej & Coffee Sections

--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
               Pain aux raisins
             </li>
             <li class = "list-group-item">
-              <span class = "pull-right"> $3.50</span>
+              <span class = "badge pull-right"> $3.50</span>
               Muffin
             </li>
             <li class = "list-group-item">
@@ -261,12 +261,12 @@
       
         <div class = "panel panel-default">
           <div class="panel-heading">
-              <h3 class="panel-title">Belgium Waffle</h3>
+              <h3 class="panel-title">Belgium Waffle
+                <span class = "badge pull-right" style="color:#291a0f;background-color:#ead7c8"> $8.50</span>
+              </h3>
           </div>
           <ul class="list-group">
             <li class = "list-group-item">
-              <span class = "badge pull-right"> $8.50</span>
-              <span class = "badge pull-right">CLASSIC</span>
               Topped with powder sugar
             </li>
             <li class = "list-group-item">
@@ -290,7 +290,7 @@
               Sliced Bannana
             </li>
             <li class = "list-group-item">
-              <span class = "pull-right"> +$2.00</span>
+              <span class = "badge pull-right"> +$2.00</span>
               Market Berries
             </li>
             <li class = "list-group-item">
@@ -305,6 +305,21 @@
           </ul>
         </div>
 
+        <div class = "panel panel-default">
+          <div class="panel-heading">
+              <h3 class="panel-title">Other Drinks</h3>
+          </div>
+          <ul class="list-group">
+            <li class = "list-group-item">
+              <span class = "badge pull-right"> $3.75</span>
+              Home made basil lemonade
+            </li>
+            <li class = "list-group-item">
+              <span class = "badge pull-right"> $4.75</span>
+              Fresh squeezed orange juice
+            </li>
+          </ul>
+        </div>
       </div>
       <div class="col-md-6">
 
@@ -315,7 +330,6 @@
             <ul class="list-group">
               <li class = "list-group-item">
                 <span class = "badge pull-right"> $4.50</span>
-                <span class = "badge pull-right">NEW</span>
                 Ham and Chesse croissant
               </li>
               <li class = "list-group-item">
@@ -335,10 +349,88 @@
                 Quiche Lorraine served with a side salad
               </li>
             </ul>
+        </div>
+
+        <div class = "panel panel-default">
+            <div class="panel-heading">
+                <h3 class="panel-title">Petit Déjeuner
+                <span class = "badge pull-right" style="color:#291a0f;background-color:#ead7c8"> $14.50</span></h3>
+            </div>
+            <ul class="list-group">
+              <li class = "list-group-item">
+                Coffee
+              </li>
+              <li class = "list-group-item">
+                Fresh Squeezed Orange Juice
+              </li>
+              <li class = "list-group-item">
+                Slice of artisan bread toasted with home made jam and butter
+              </li>
+              <li class = "list-group-item">
+                Greek yogurt with market berries, orange blossom honey, pistachio and home made granola
+              </li>
+            </ul>
+        </div>
+
+        <div class = "panel panel-default">
+            <div class="panel-heading">
+                <h3 class="panel-title">Coffee</h3>
+            </div>
+            <ul class="list-group">
+              <li class = "list-group-item">
+                <span class = "badge pull-right"> $3.10</span>
+                Double Espresso
+              </li>
+              <li class = "list-group-item">
+                <span class = "badge pull-right"> $3.50</span>
+                Double Macchiato
+              </li>
+              <li class = "list-group-item">
+                <span class = "badge pull-right"> $3.10</span>
+                Americano
+              </li>
+              <li class = "list-group-item">
+                <span class = "badge pull-right"> $3.50</span>
+                Hot Tea / Ice Tea
+              </li>
+              <li class = "list-group-item">
+                <span class = "badge pull-right"> $3.50</span>
+                Coffee
+              </li>
+              <li class = "list-group-item">
+                <span class="pull-right"> 16oz: <span class = "badge">$4.95</span></span>
+                <span class="pull-right"> 12oz: <span class = "badge">$4.10</span></span>
+                Latte / Iced Latte
+              </li>
+              <li class = "list-group-item">
+                <span class="pull-right"> 16oz: <span class = "badge">$4.95</span></span>
+                <span class="pull-right"> 12oz: <span class = "badge">$4.10</span></span>
+                Café au lait
+              </li>
+              <li class = "list-group-item">
+                <span class = "badge pull-right"> $5.10</span>
+                Home made Hot Chocolate
+              </li>
+              <li class = "list-group-item">
+                <span class = "badge pull-right"> $4.10</span>
+                Cappucino
+              </li>
+              <li class = "list-group-item">
+                <span class = "badge pull-right"> $1.00</span>
+                Add Soy
+              </li>
+              <li class = "list-group-item">
+                <span class = "badge pull-right"> $.50</span>
+                Add Vanilla flavor
+              </li>
+            </ul>
           </div>
+
         </div>
       </div>
+
     </div>
+
 
     <!-- Map -->
 
