Add some comments

--- a/index.html
+++ b/index.html
@@ -424,12 +424,14 @@
                 Add Vanilla flavor
               </li>
             </ul>
-          </div>
+          </div> <!-- panel -->
+        </div> <!-- col -->
+      </div> <!-- row -->
 
         </div>
       </div>
 
-    </div>
+    </div> <!-- container marketing -->
 
 
     <!-- Map -->
