--- a/index.html
+++ b/index.html
@@ -428,8 +428,40 @@
         </div> <!-- col -->
       </div> <!-- row -->
 
-        </div>
-      </div>
+      <div class="row">
+        <div class="col-md-12">
+          <div class = "panel panel-default">
+            <div class="panel-heading">
+              <h3 class="panel-title">Sandwiches</h3>
+            </div>
+            <div class="panel-body">
+            served with Artisan Bread and Home made Dressing
+            </div>
+            <ul class="list-group">
+            <li class = "list-group-item">
+              <span class = "badge pull-right"> $11.50</span>
+              <strong class="panel-title">Mediterraneen Sandwich</strong><br>
+               Home made tapenade – Goat cheese – Sliced Tomato – Herbes de Provence. 
+            </li>
+            <li class = "list-group-item">
+              <span class = "badge pull-right"> $11.50</span>
+              <strong class="panel-title">Veggie</strong><br>
+               Lettuce – Shredded Carrot – Tomato Red onions with a spread of Vegan Mayonnaise.
+            </li>
+            <li class = "list-group-item">
+              <span class = "badge pull-right"> $11.50</span>
+              <strong class="panel-title">Ham and Cheese</strong><br>
+               Black Forest Ham – Swiss cheese with a spread of butter and Cornichons.
+            </li>
+            <li class = "list-group-item">
+              <span class = "badge pull-right"> $11.50</span>
+              <strong class="panel-title">Turkey</strong><br>
+               Oven roasted turkey - Provolone - Argula - Red onion - Tomato - Dijonaise.
+            </li>
+            </ul>
+          </div> <!-- panel -->
+        </div> <!-- col -->
+      </div> <!-- row -->
 
     </div> <!-- container marketing -->
 
