--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
               <h3 class="panel-title">Sandwiches</h3>
             </div>
             <div class="panel-body">
-            served with Artisan Bread and Home made Dressing
+            served on Artisan Bread with a Side Salad
             </div>
             <ul class="list-group">
             <li class = "list-group-item">
@@ -457,6 +457,41 @@
               <span class = "badge pull-right"> $11.50</span>
               <strong class="panel-title">Turkey</strong><br>
                Oven roasted turkey - Provolone - Argula - Red onion - Tomato - Dijonaise.
+            </li>
+            </ul>
+          </div> <!-- panel -->
+        </div> <!-- col -->
+      </div> <!-- row -->
+
+      <div class="row">
+        <div class="col-md-12">
+          <div class = "panel panel-default">
+            <div class="panel-heading">
+              <h3 class="panel-title">Salads</h3>
+            </div>
+            <div class="panel-body">
+            served with Artisan Bread and Home made Dressing
+            </div>
+            <ul class="list-group">
+            <li class = "list-group-item">
+              <span class = "badge pull-right"> $13.50</span>
+              <strong class="panel-title">Chef’s Salad</strong><br>
+              Spring Mix – Black Ham Forest – Gruyere – Boiled eggs
+            </li>
+            <li class = "list-group-item">
+              <span class = "badge pull-right"> $11.50</span>
+              <strong class="panel-title">Rocket Salad</strong><br>
+               Argula – Shaved Pecarino Cheese – Olive Oil – Sea Salt – Pepper
+            </li>
+            <li class = "list-group-item">
+              <span class = "badge pull-right"> $13.50</span>
+              <strong class="panel-title">Butter Lettuce</strong><br>
+               Tomato – Shaved Fennel – Breakfast Radish – Snipped Chives – Ranch dressing
+            </li>
+            <li class = "list-group-item">
+              <span class = "badge pull-right"> $12.50</span>
+              <strong class="panel-title">Garden Salad</strong><br>
+               Spring mix - Tomato-Shredded carrot - Fresh herbs
             </li>
             </ul>
           </div> <!-- panel -->
