Soup of the day

--- a/index.html
+++ b/index.html
@@ -498,6 +498,19 @@
         </div> <!-- col -->
       </div> <!-- row -->
 
+      <div class="row">
+        <div class="col-md-12">
+          <div class = "panel panel-default">
+            <div class="panel-heading">
+              <h3 class="panel-title">Soup of the day</h3>
+            </div>
+            <div class="panel-body">
+            see board for today's offering.
+            </div>
+          </div> <!-- panel -->
+        </div> <!-- col -->
+      </div> <!-- row -->
+
     </div> <!-- container marketing -->
 
 
