Size down images a bit

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
           <p class="lead">We serve breakfast, lunch, coffees, home made iced tea, fresh squeezed orange juice, lemonade and sodas.</p>
         </div>
         <div class="col-md-5">
-          <img class="featurette-image img-responsive center-block img-circle" src="img/french_pastries.jpg" alt="Generic placeholder image">
+          <img class="grignoteMarketingImg featurette-image img-responsive center-block img-circle" src="img/french_pastries.jpg" alt="Generic placeholder image">
         </div>
       </div>
 
@@ -177,7 +177,7 @@
           <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
         </div>
         <div class="col-md-5 col-md-pull-7">
-          <img class="featurette-image img-responsive center-block img-circle" src="img/uncooked_croissants.jpg" alt="Generic placeholder image">
+          <img class="grignoteMarketingImg featurette-image img-responsive center-block img-circle" src="img/uncooked_croissants.jpg" alt="Generic placeholder image">
         </div>
       </div>
 
@@ -189,7 +189,7 @@
           <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
         </div>
         <div class="col-md-5">
-          <img class="featurette-image img-responsive center-block img-circle" src="img/soup.jpg" alt="Generic placeholder image">
+          <img class="grignoteMarketingImg featurette-image img-responsive center-block img-circle" src="img/soup.jpg" alt="Generic placeholder image">
         </div>
       </div>
 
