--- a/index.html
+++ b/index.html
@@ -540,9 +540,9 @@
     google.maps.event.addDomListener(window, 'load', initialize);
     </script>
 
-    <footer>
+    <footer class="container" style="margin-top: 20px">
       <p class="pull-right"><a href="#">Back to top</a></p>
-      <p>&copy; 2016 La Grignote, Inc. &middot; Design by <a>Papatango Flying Circus</a></p>
+      <p>&copy; 2016 La Grignote, Inc. &middot;  dev by <a href="http://papatango.io">papatango.io</a></p>
     </footer>
   </body>
 </html>
