Add logo to title
Need a better asset.

--- a/index.html
+++ b/index.html
@@ -109,7 +109,8 @@
 
     <!-- Opening Hours, Location, Follow us -->
     <div class="container text-center marketing">
-      <h2 class="featurette-heading grignoteLogo">La Grignote<br></h2>
+
+      <h2 class="featurette-heading grignoteLogo"><img src="img/grignotepup.png" style="width: 50px; margin-right: 10px;">La Grignote<br></h2>
       <h3><span class="text-muted">Key West, FL</span></h3>
       <p class="lead">La Grignote is an Artisan French Bakery - Café – Bistro that offers a selection of home made Viennoiseries-Pastries-Bread-Sandwiches and Salads. Everything is made from scratch.</p>
 
