--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
       <div class="row featurette">
         <div class="col-md-7">
           <h2 class="featurette-heading">Stop by for lunch. <span class="text-muted">Or just for an espresso.</span></h2>
-          <p class="lead">We serve breakfast, lunch, coffees, home made iced tea, fresh squeezed orange juice, lemonade and sodas.</p>
+          <p class="lead">We serve breakfast, lunch, coffees, home made iced tea, fresh squeezed orange juice, lemonade and sodas. <a href="#menu">See our menu.</a></p>
         </div>
         <div class="col-md-5">
           <img class="grignoteMarketingImg featurette-image img-responsive center-block img-circle" src="img/french_pastries.jpg" alt="Generic placeholder image">
