--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       <!-- Wrapper for slides -->
       <div class="carousel-inner" role="listbox">
         <div class="item active">
-          <img src="img/joel/store_front.jpg" alt="Store Front">
+          <img src="img/joel/store_front.JPG" alt="Store Front">
           <!--div class="carousel-caption">
             <h2>In the heart of Key West, FL</h2>
             <p>We are located west of the historical district, on Duval St.</p>
@@ -80,7 +80,7 @@
         </div>
 
         <div class="item">
-          <img src="img/joel/store_side.jpg" alt="Counter">
+          <img src="img/joel/store_side.JPG" alt="Counter">
           <!--div class="carousel-caption">
             <h3>With Plenty of Outdoor Seating.</h3>
             <p>Or stay inside and check out our beach wood countertops.</p>
@@ -88,7 +88,7 @@
         </div>
 
         <div class="item">
-          <img src="img/joel/store_inside.jpg" alt="Soup">
+          <img src="img/joel/store_inside.JPG" alt="Soup">
           <!--div class="carousel-caption">
             <h3>Coffee or Lunch, you decide.</h3>
             <p>We make our own french style pastries. We have soup too.</p>
