--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
         <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
         <li data-target="#myCarousel" data-slide-to="1"></li>
         <li data-target="#myCarousel" data-slide-to="2"></li>
+        <li data-target="#myCarousel" data-slide-to="3"></li>
       </ol>
 
       <!-- Wrapper for slides -->
@@ -80,7 +81,7 @@
         </div>
 
         <div class="item">
-          <img src="img/joel/store_side.JPG" alt="Counter">
+          <img src="img/joel/store_side.JPG" alt="Side of store.">
           <!--div class="carousel-caption">
             <h3>With Plenty of Outdoor Seating.</h3>
             <p>Or stay inside and check out our beach wood countertops.</p>
@@ -88,7 +89,15 @@
         </div>
 
         <div class="item">
-          <img src="img/joel/store_inside.JPG" alt="Soup">
+          <img src="img/joel/store_inside.JPG" alt="Inside the store.">
+          <!--div class="carousel-caption">
+            <h3>Coffee or Lunch, you decide.</h3>
+            <p>We make our own french style pastries. We have soup too.</p>
+          </div--> 
+        </div>
+
+        <div class="item">
+          <img src="img/counter.jpg" alt="Bakery Counter">
           <!--div class="carousel-caption">
             <h3>Coffee or Lunch, you decide.</h3>
             <p>We make our own french style pastries. We have soup too.</p>
