Fix marketing message

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
       <div class="row featurette">
         <div class="col-md-7">
           <h2 class="featurette-heading">Stop by for lunch. <span class="text-muted">Or just for an espresso.</span></h2>
-          <p class="lead">We serve breakfast, lunch, coffees, home made iced tea, fresh squeezed orange juice, lemonade and sodas. <a href="#menu">See our menu.</a></p>
+          <p class="lead">We serve breakfast, lunch, coffees, home made iced tea, fresh squeezed orange juice, lemonade and sodas. We are also great for brunch. <a href="#menu">See our menu.</a></p>
         </div>
         <div class="col-md-5">
           <img class="grignoteMarketingImg featurette-image img-responsive center-block img-circle" src="img/french_pastries.jpg" alt="Generic placeholder image">
@@ -184,7 +184,9 @@
       <div class="row featurette">
         <div class="col-md-7 col-md-push-5">
           <h2 class="featurette-heading">We make our own pastries. <span class="text-muted">You can smell and taste the difference.</span></h2>
-          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+          <p class="lead">We bake our own bread in the back of the shop. Croissants and chocolate croissants
+          are also baked daily. We also make a full array of pastries including danish, muffins, cookies... <a href="#menu">See our menu.</a>
+          </p>
         </div>
         <div class="col-md-5 col-md-pull-7">
           <img class="grignoteMarketingImg featurette-image img-responsive center-block img-circle" src="img/uncooked_croissants.jpg" alt="Generic placeholder image">
@@ -195,11 +197,12 @@
 
       <div class="row featurette">
         <div class="col-md-7">
-          <h2 class="featurette-heading">Not your average lunch box. <span class="text-muted">French American fusion.</span></h2>
-          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+          <h2 class="featurette-heading">A full array of sandwiches and salads. <span class="text-muted">On our signature bread loaf.</span></h2>
+          <p class="lead">We have an outdoor patio as well as indoor seating. We have daily specials.
+          </p>
         </div>
         <div class="col-md-5">
-          <img class="grignoteMarketingImg featurette-image img-responsive center-block img-circle" src="img/soup.jpg" alt="Generic placeholder image">
+          <img class="grignoteMarketingImg featurette-image img-responsive center-block img-circle" src="img/bab/baked_camembert.JPG" alt="Generic placeholder image">
         </div>
       </div>
 
