Input Latest Menu

--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
               </li>
               <li class = "list-group-item">
                 <span class = "badge pull-right"> $5.50</span>
-                Goat Cheese Mushroom Galette
+                Feta Spinach Galette
               </li>
               <li class = "list-group-item">
                 <span class = "badge pull-right"> $5.50</span>
@@ -458,7 +458,7 @@
             <li class = "list-group-item">
               <span class = "badge pull-right"> $11.50</span>
               <strong class="panel-title">Veggie</strong><br>
-               Lettuce – Shredded Carrot – Tomato Red onions with a spread of Vegan Mayonnaise.
+               Lettuce – Shredded Carrot – Tomato – Red onions with a spread of Vegan Mayonnaise.
             </li>
             <li class = "list-group-item">
               <span class = "badge pull-right"> $11.50</span>
@@ -469,6 +469,11 @@
               <span class = "badge pull-right"> $11.50</span>
               <strong class="panel-title">Turkey</strong><br>
                Oven roasted turkey - Provolone - Argula - Red onion - Tomato - Dijonaise.
+            </li>
+            <li class = "list-group-item">
+              <span class = "badge pull-right"> $11.50</span>
+              <strong class="panel-title">Tuna Melt</strong><br>
+               Tuna Salad - Tomato - Cheddar.
             </li>
             </ul>
           </div> <!-- panel -->
@@ -497,13 +502,13 @@
             </li>
             <li class = "list-group-item">
               <span class = "badge pull-right"> $13.50</span>
-              <strong class="panel-title">Butter Lettuce</strong><br>
-               Tomato – Shaved Fennel – Breakfast Radish – Snipped Chives – Ranch dressing
+              <strong class="panel-title">Cesar Salad</strong><br>
+               Romaine Lettuce – Shaved Parmesan – Anchovies dressing
             </li>
             <li class = "list-group-item">
               <span class = "badge pull-right"> $12.50</span>
               <strong class="panel-title">Garden Salad</strong><br>
-               Spring mix - Tomato-Shredded carrot - Fresh herbs
+               Spring mix - Tomato - Shredded carrot - Fresh herbs
             </li>
             </ul>
           </div> <!-- panel -->
@@ -514,7 +519,9 @@
         <div class="col-md-12">
           <div class = "panel panel-default">
             <div class="panel-heading">
-              <h3 class="panel-title">Soup of the day</h3>
+              <h3 class="panel-title">Soup of the day
+                <span class = "badge pull-right" style="color:#291a0f;background-color:#ead7c8"> $6.75</span>
+              </h3>
             </div>
             <div class="panel-body">
             see board for today's offering.
