Add other images

--- a/index.html
+++ b/index.html
@@ -223,8 +223,39 @@
         </div>
       </div>
 
+      <div class="row featurette text-center">
+        <div class="col-sm-4">
+          <img src="img/bab/croissants.JPG" alt="Croissants" class="featurette-image img-responsive center-block img-circle" style="width:50%">
+          <p><strong>Freshly baked</strong></p><br>
+        </div>
+        <div class="col-sm-4">
+        <img src="img/bab/miche.JPG" alt="Coffee" class="featurette-image img-responsive center-block img-circle" style="width:50%">
+        <p><strong>Our signature country bread</strong></p><br>
+        </div>
+        <div class="col-sm-4">
+        <img src="img/bab/muffins.JPG" alt="Pup" class="featurette-image img-responsive center-block img-circle" style="width:50%">
+        <p><strong>Muffins</strong></p><br>
+        </div>
+      </div>
+
+      <div class="row featurette text-center">
+        <div class="col-sm-4">
+          <img src="img/bab/pastry1.jpg" alt="People" class="featurette-image img-responsive center-block img-circle" style="width:50%">
+          <p><strong>Feta Spinach Galette</strong></p><br>
+        </div>
+        <div class="col-sm-4">
+        <img src="img/bab/pastry2.jpg" alt="Coffee" class="featurette-image img-responsive center-block img-circle" style="width:50%">
+        <p><strong>Daily Special: Baked egg cup with bacon.</strong></p><br>
+        </div>
+        <div class="col-sm-4">
+        <img src="img/bab/pastry3.jpg" alt="Pup" class="featurette-image img-responsive center-block img-circle" style="width:50%">
+        <p><strong>Goat Cheese Cherry Tomato Galette</strong></p><br>
+        </div>
+      </div>
+
       <hr class="featurette-divider">
-    </div>
+
+    </div> <!-- container marketing-->
 
     <div class="container marketing" id="menu">
     
